--- a/ScavengerApp/Cells/CatalogViewCollectionHeader.xib
+++ b/ScavengerApp/Cells/CatalogViewCollectionHeader.xib
@@ -34,7 +34,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="180317795">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="131274289">
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 60}</string>
 						<reference key="NSSuperview" ref="180317795"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="937909292"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<float key="IBUIAlpha">0.69999998807907104</float>
@@ -58,7 +57,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{12, 10}, {40, 40}}</string>
 						<reference key="NSSuperview" ref="180317795"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="834620171"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -71,8 +69,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{76, 19}, {230, 21}}</string>
 						<reference key="NSSuperview" ref="180317795"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -102,8 +98,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 60}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="131274289"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -163,7 +157,7 @@
 						<int key="objectID">2</int>
 						<reference key="object" ref="180317795"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="322597576">
+							<object class="IBNSLayoutConstraint" id="785834100">
 								<reference key="firstItem" ref="180317795"/>
 								<int key="firstAttribute">10</int>
 								<int key="relation">0</int>
@@ -197,7 +191,7 @@
 								<int key="contentType">3</int>
 								<bool key="placeholder">NO</bool>
 							</object>
-							<object class="IBNSLayoutConstraint" id="400767475">
+							<object class="IBNSLayoutConstraint" id="31786440">
 								<reference key="firstItem" ref="937909292"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
@@ -401,12 +395,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">70</int>
-						<reference key="object" ref="322597576"/>
+						<reference key="object" ref="785834100"/>
 						<reference key="parent" ref="180317795"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">71</int>
-						<reference key="object" ref="400767475"/>
+						<reference key="object" ref="31786440"/>
 						<reference key="parent" ref="180317795"/>
 					</object>
 				</array>
@@ -427,9 +421,9 @@
 					<reference ref="252715762"/>
 					<reference ref="345093336"/>
 					<reference ref="568157903"/>
-					<reference ref="400767475"/>
+					<reference ref="31786440"/>
 					<reference ref="923395410"/>
-					<reference ref="322597576"/>
+					<reference ref="785834100"/>
 				</array>
 				<string key="47.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<boolean value="NO" key="47.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
@@ -456,53 +450,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">72</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CatalogViewCollectionHeader</string>
-					<string key="superclassName">UICollectionReusableView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="headerBackgroundImage">UIImageView</string>
-						<string key="headerImage">UIImageView</string>
-						<string key="headerLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="headerBackgroundImage">
-							<string key="name">headerBackgroundImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="headerImage">
-							<string key="name">headerImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="headerLabel">
-							<string key="name">headerLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CatalogViewCollectionHeader.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UICollectionReusableView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UICollectionReusableView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.previouslyAttemptedUpgradeToXcode5">YES</bool>
